--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>Heissan jag gillar spela fotboll</title>
 </head>
 <body>
-https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG
+
 <h1>Tuomas on horo</h1>
 <p>Ja komea.</p>
 
 </body>
 </html>
-<img src="img/kissa.png" alt="tuomas
+<img src="https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG" alt="tuomas
