--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
 
 </body>
 </html>
-<img src="https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG" alt="tuomas>
+<img src="https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG" alt="tuomas">
