--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <title>Heissan jag gillar spela fotboll</title>
 </head>
 <body>
-
+<h1>Tykkään keilata</h1>
 <h1>Tuomas on horo</h1>
 <p>Ja komea.</p>
 
 </body>
 </html>
 <img src="https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG" alt="tuomas">
+#6495ED
+100, 149, 237
