--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <h1>Tykkään keilata</h1>
-<h1>Tuomas on horo</h1>
+<h1>Tuomas on hongkongista</h1>
 <p>Ja komea.</p>
 
 </body>
 </html>
 <img src="https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG" alt="tuomas">
-#6495ED
-100, 149, 237
+<img src="https://https://c.tenor.com/JWo08tw_xL4AAAAM/siuuuuuu.gif
+
