--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>Tykkään keilata</h1>
 <h1>Tuomas on hongkongista</h1>
 <p>Ja komea.</p>
-
+<p>MOI SAMU!!</p>
 </body>
 </html>
 <img src="https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG" alt="tuomas">
