--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 <h1>Tykkään keilata</h1>
 <h1>Tuomas on hongkongista</h1>
 <p>Ja komea.</p>
+  <!DOCTYPE html>
+<html>
+<head>
+<style>
+p {
+  color: blue;
+  text-align: HAALAND9;
+} 
+</style>
+</head>
+<body>
+
+<p>Haaland number 9!</p>
+<p>Mbappe on huono.</p>
+
+</body>
+</html>
+
 <p>MOI SAMU!!</p>
 </body>
 </html>
