--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ p {
 </style>
 </head>
 <body>
-
+<p>Tuomas on top 5 snooker pelaajia all time
 <p>Haaland number 9!</p>
 <p>Mbappe on huono.</p>
-
+<p>Aguero on goat!!</p>
 </body>
 </html>
 
