--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ p {
 <p>Aguero on goat!!</p>
 </body>
 </html>
-
 <p>MOI SAMU!!</p>
 </body>
 </html>
 <img src="https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG" alt="tuomas">
 <img src="https://c.tenor.com/JWo08tw_xL4AAAAM/siuuuuuu.gif" alt="RONALDO">
 <img src="https://media.giphy.com/media/KDslQkrF0XqKbtjwJL/giphy.gif" alt="josef">
+<link rel="stylesheet" href=css/style.css">
