--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="css/style.css">
+</head>
+
+  <head>
 <title>Heissan jag gillar spela fotboll</title>
 </head>
 <body>
@@ -30,6 +34,4 @@ p {
 <img src="https://4.bp.blogspot.com/-H8YPryw3KSY/UnUJKUts7eI/AAAAAAAAC2Q/7kUVr0qXNbI/s1600/MustaHevonen.JPG" alt="tuomas">
 <img src="https://c.tenor.com/JWo08tw_xL4AAAAM/siuuuuuu.gif" alt="RONALDO">
 <img src="https://media.giphy.com/media/KDslQkrF0XqKbtjwJL/giphy.gif" alt="josef">
-<head>
-<link rel="stylesheet" href="css/style.css">
-</head>
+</html>
