--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Niklaksen CSS</title>
-<link rel="stylesheet" href="CSS/style.css">
+<link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
 <h1>Tykkään keilata</h1>
