--- a/index.html
+++ b/index.html
@@ -28,3 +28,20 @@ p {
 <img src="https://c.tenor.com/JWo08tw_xL4AAAAM/siuuuuuu.gif" alt="RONALDO">
 <img src="https://media.giphy.com/media/KDslQkrF0XqKbtjwJL/giphy.gif" alt="josef">
 </html>
+<table>
+<tr>
+<th>Company</th>
+<th>Contact</th>
+<th>Country</th>
+</tr>  
+<tr>
+<td>Alfreds Futterkiste</td>
+<td>Maria Anders</td>
+<td>Germany</td>
+</tr>
+<tr>
+<td>Centro comercial Moctezuma</td>
+<td>Francisco Chang</td>
+  <td>Mexico</td>
+</tr>
+</table>
