--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ p {
 <img src="https://c.tenor.com/JWo08tw_xL4AAAAM/siuuuuuu.gif" alt="RONALDO">
 <img src="https://media.giphy.com/media/KDslQkrF0XqKbtjwJL/giphy.gif" alt="josef">
 <ul>
-<li>Kotiin kohta</li>
+<li>Kotiin kohta
+</li>
 </ul>
 </html>
 <table>
